# live-bootcamp-project

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  compose.override.yml  compose.yml  docker.sh
.github/workflows/: prod.yml
app-service/: Cargo.toml  Dockerfile
app-service/.cargo/: config.toml
app-service/assets/: app.js
app-service/proto/: Cargo.toml  build.rs
app-service/proto/src/: lib.rs
app-service/src/: main.rs
app-service/templates/: index.html
auth-service/: Cargo.toml  Dockerfile  api_schema.yml
auth-service/.sqlx/: query-6d461d2e8992590874200117d73f6705f6aa90baff3b0c89602cd1567fbed273.json  query-6f9c890d4e076fb63a600033e3ecd07cb45a68e8dc746819455a2e3b6c2382a0.json  query-9f61e11a8cfcb4af0ca92ff74de8734a82b5dea841f6b7a66152941af8b69ecd.json  query-bf588493a9471e22adfe29f2b0aa4bf10a760212867f3404ef7bb7608f22ab15.json  query-d005c18e6a8ecc72a0974acbd3cfd6a2be9ffe2a15dce305a73919278d6f9e82.json  query-fd20b98e969e700c089847cf6d93ae68c2c395515bd47070d172e0a21d9c2718.json
auth-service/assets/: app.js  auth-app.js  index.html
auth-service/macros/: Cargo.toml
auth-service/macros/src/: lib.rs
auth-service/proto/: Cargo.toml  build.rs
auth-service/proto/src/: auth.proto  lib.rs
auth-service/src/: lib.rs  main.rs
auth-service/src/api/: grpc.rs  rest.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: initiate_password_reset.rs  login.rs  logout.rs  mod.rs  reset_password.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: app_state.rs  concrete_app_services.rs  hashmap_banned_token_store.rs  hashmap_password_reset_token_store.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_password_reset_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: db.rs  grpc_signup.rs  helpers.rs  login.rs  logout.rs  main.rs  rest_login.rs  rest_logout.rs  rest_password_reset.rs  rest_signup.rs  rest_verify_2fa.rs  rest_verify_token.rs  root.rs  routes.rs  signup.rs  user_store.rs  verify_2fa.rs  verify_token.rs
database/: db-init.sh  dockerfile  test_db_cleanup.sql
infra/: README.md  github.tf  main.tf  terraform.tfstate  user_data.tftpl  variables.tf
local/: nginx.local.conf
nginx/: nginx.local.conf  nginx.prod.conf
