[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-proto = { path = "./proto" }
askama = "0.12.1"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
env_logger = "0.11.5"
log = "0.4"
reqwest = { version = "0.12.5", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.12.1"
tower-http = { version = "0.5.0", features = ["fs"] }


[build-dependencies]
tonic-build = "0.12.1"


[[bin]]
name = "app-service"
path = "src/main.rs"
