[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
auth-proto = { path = "./proto" }
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
async-trait = "0.1.78"
validator = { version = "0.18.1", features = ["derive"] }
tonic = "0.12.1"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
env_logger = "0.11.5"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.12.1"

[dev-dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["json", "cookies"] }
fake = "=2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
