[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.78"
auth-proto = { path = "./proto" }
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
chrono = "0.4.35"
dotenvy = "0.15.7"
env_logger = "0.11.5"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
tokio = { version = "1.36", features = ["full"] }
tonic = "0.12.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.1"

[dev-dependencies]
fake = "=2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "cookies"] }
rstest = "0.22.0"
