[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.78"
auth-proto = { path = "./proto" }
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
chrono = "0.4.35"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
env_logger = "0.11.5"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.8.5"
redis = { version = "0.26.1", features = ["tokio-comp"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
thiserror = "1.0.58"
tokio = { version = "1.36", features = ["full"] }
tonic = "0.12.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-error = "0.2.0"
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.1"

[dev-dependencies]
fake = "=2.9.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rstest = "0.22.0"
wiremock = "0.6.0"
